<resources>
    <string name="app_name">My Application22</string>
    <string name="cilj">Šta želite da postignete?</string>
    <string name="smrsaj">Smršati</string>
    <string name="odr">Održati težinu</string>
    <string name="pov">Udebljati se</string>
    <string name="kol">Koliko ste aktivni?</string>
    <string name="nis1">Nisam mnogo aktivan</string>
    <string name="nis2">Donekle aktivan</string>
    <string name="nis3">Aktivan</string>
    <string name="nis4">Veoma aktivan</string>
    <string name="ni1">Većinski deo dana provedem sedeći (npr. kancelarijski posao)</string>
    <string name="ni2">Provodim dobar deo dana na nogama (npr. predavač, prodavac)</string>
    <string name="ni3">Provodim dobar deo dana radeći neku fizičku aktivnost (npr. poštar)</string>
    <string name="ni4">Većinski deo dana provodim radeći neku težu fizićku aktivnost (npr. kurir, stolar)</string>
    <string name="pol">Pol</string>
    <string name="mus">Muško</string>
    <string name="zen">Žensko</string>
    <string name="rod">Datum rođenja</string>
    <string name="vis">Visina</string>
    <string name="tez">Težina</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="cil">Krajnji cilj</string>
    <string name="koji">Nedeljni cilj</string>
    <string name="neb">Ne brinite, možete ovo kasnije izmeniti.</string>
    <string name="kg1">Smršaj 0,25kg nedeljno</string>
    <string name="kg2">Smršaj 0,50kg nedeljno</string>
    <string name="kg3">Smršaj 0,75kg nedeljno</string>
    <string name="kg4">Smršaj 1kg nedeljno</string>
    <string name="cest">Čestitamo!</string>
    <string name="vas">Vaš plan je spreman i napravili ste prvi korak ka Vašoj ciljanoj težini.</string>
    <string name="dne">Vaš dnevni cilj:</string>
    <string name="cal">0</string>
    <string name="call">kalorija</string>
    <string name="pods">Uključi podsetnike</string>
    <string name="poc">Počni da pratiš</string>
    <string name="pre">Preostale kalorije</string>
    <string name="hra">Hrana</string>
    <string name="vez">Vežbe</string>
    <string name="nula">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="jednako">=</string>
    <string name="dnev">Dnevni cilj</string>
    <string name="ciljevi">Ciljevi:</string>
    <string name="po">Po obrocima:</string>
    <string name="dor">Doručak:</string>
    <string name="ruc">Ručak:</string>
    <string name="uz">Užina:</string>
    <string name="vec">Večera:</string>
    <string name="title_activity_actual_main">ActualMainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ItFitDev</string>
    <string name="nav_header_subtitle">amartahiri067@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Kuća</string>
    <string name="menu_gallery">Dnevnik</string>
    <string name="menu_slideshow">Napredak</string>
    <string name="menu_tools">Ciljevi</string>
    <string name="menu_share">Profil</string>
</resources>
